# ganesha

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/ganesha/: __init__.py  __main__.py  cli.py  compression.py  config.py  core.py  memory.py
tests/: test_compression.py  test_core.py  test_memory.py
